[gd_scene load_steps=28 format=3 uid="uid://bhtein0chknfn"]

[ext_resource type="Script" path="res://cenas/jogador.gd" id="1_1stpw"]
[ext_resource type="Texture2D" uid="uid://fq4urowsnl64" path="res://arquivos/img/jogador sprite/Death.png" id="2_2gon7"]
[ext_resource type="AudioStream" uid="uid://dscpg6m666dta" path="res://arquivos/som e fonte/jump.wav" id="2_60go1"]
[ext_resource type="Texture2D" uid="uid://3uimrlm6jf6s" path="res://arquivos/img/jogador sprite/Idle.png" id="3_4ec6d"]
[ext_resource type="Texture2D" uid="uid://cpc24dsh5grmo" path="res://arquivos/img/jogador sprite/Run.png" id="4_1x78x"]
[ext_resource type="Texture2D" uid="uid://c1u34hx82jysx" path="res://arquivos/img/jogador sprite/Jump.png" id="4_iujvs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pb5on"]
atlas = ExtResource("2_2gon7")
region = Rect2(450, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oalod"]
atlas = ExtResource("4_1x78x")
region = Rect2(0, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_uysd5"]
atlas = ExtResource("4_1x78x")
region = Rect2(150, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_phqnw"]
atlas = ExtResource("4_1x78x")
region = Rect2(300, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqdo8"]
atlas = ExtResource("4_1x78x")
region = Rect2(450, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih2q0"]
atlas = ExtResource("4_1x78x")
region = Rect2(600, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3ymu"]
atlas = ExtResource("4_1x78x")
region = Rect2(750, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynuo6"]
atlas = ExtResource("4_1x78x")
region = Rect2(900, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_dapna"]
atlas = ExtResource("4_1x78x")
region = Rect2(1050, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ohjk"]
atlas = ExtResource("3_4ec6d")
region = Rect2(150, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlvft"]
atlas = ExtResource("3_4ec6d")
region = Rect2(300, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb2pj"]
atlas = ExtResource("3_4ec6d")
region = Rect2(450, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbawg"]
atlas = ExtResource("3_4ec6d")
region = Rect2(600, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1h4i"]
atlas = ExtResource("3_4ec6d")
region = Rect2(750, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_udflw"]
atlas = ExtResource("3_4ec6d")
region = Rect2(900, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0lfk"]
atlas = ExtResource("3_4ec6d")
region = Rect2(1050, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftjfx"]
atlas = ExtResource("4_iujvs")
region = Rect2(0, 0, 150, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2om4"]
atlas = ExtResource("4_iujvs")
region = Rect2(150, 0, 150, 95)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wmvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb5on")
}],
"loop": true,
"name": &"agachar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oalod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uysd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phqnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqdo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih2q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3ymu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynuo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dapna")
}],
"loop": true,
"name": &"correr",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ohjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlvft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb2pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbawg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1h4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udflw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0lfk")
}],
"loop": true,
"name": &"parado",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftjfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2om4")
}],
"loop": true,
"name": &"pular",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whux2"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1b5m"]
size = Vector2(10, 13.125)

[node name="Jogador" type="CharacterBody2D"]
z_index = 1
scale = Vector2(8, 8)
script = ExtResource("1_1stpw")

[node name="Jogador" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.5, -7.25)
scale = Vector2(0.451833, 0.466484)
sprite_frames = SubResource("SpriteFrames_6wmvf")
animation = &"parado"
autoplay = "parado"

[node name="CorrerCol" type="CollisionShape2D" parent="."]
position = Vector2(-0.625, 5.375)
shape = SubResource("RectangleShape2D_whux2")
disabled = true

[node name="AgacharCol" type="CollisionShape2D" parent="."]
position = Vector2(-0.625, 6.75)
shape = SubResource("RectangleShape2D_t1b5m")

[node name="SomPulo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_60go1")
volume_db = -30.0
